--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cssnano": "^4.1.8",
+    "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-px-to-viewport": "0.0.3",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
+    "swiper": "^4.4.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.2"
   },
@@ -60,6 +67,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
