--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
     "cssnano": "^4.1.8",
+    "mini-ui": "0.0.1-alpha",
     "mockjs": "^1.0.1-beta3",
     "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
